Quotes Carousel links fixes Remove Make a Mask link from bottom footer Aligned About and Special Thanks Aligned Scroll to Top button so that Special Thanks do not hide Fixes Scroll to Top functionality for mobile devices Remove Periods in Yourself, Family and neighbors, Change color of last period

--- a/styles/main.css
+++ b/styles/main.css
@@ -152,6 +152,10 @@ body {
     color: #FFF;
 }
 
+.black {
+    color: #000;
+}
+
 .green {
     color: #0DAB76;
 }
@@ -368,7 +372,7 @@ h2 {
 #scrollToTop {
   display: none;
   position: fixed;
-  bottom: 30px;
+  bottom: 60px;
   right: 30px;
   width: 50px;
   height: 50px;
@@ -550,7 +554,7 @@ h2 {
     }
 
     #footer {
-        text-align: center;
+        /* text-align: center; */
         padding: 5px 16px;
     }
 
